# zohomail-free

./: .env.example  .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  railway.json  sitemap.xml
.github/workflows/: docs.yml
api-reference/: index.html
changelog/: index.html
cli/: index.html
docs/: api-reference.md  changelog.md  cli.md  getting-started.md  index.md  rest-api.md
getting-started/: index.html
rest-api/: index.html
search/: search_index.json
server/: Dockerfile  api.py  main.py  railway.json  requirements.txt
zohomail/: __init__.py  ai.py  api.py  api_server.py  cli.py  client.py  smtp.py
