[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zohomail-free"
version = "0.1.4"
description = "Read, send, and reply to Zoho Mail emails on free-tier accounts — no IMAP or POP3 needed"
readme = "README.md"
license = "MIT"
authors = [{ name = "MelkonTech", email = "hello@melkon.tech" }]
requires-python = ">=3.11"
keywords = ["zoho", "mail", "email", "imap", "free"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.44.0",
    "python-dotenv>=1.0.0",
    "certifi>=2024.0.0",
]

[project.scripts]
zohomail = "zohomail.cli:main"

[project.urls]
Homepage = "https://github.com/MelkonTech/zohomail-free"
Documentation = "https://melkontech.github.io/zohomail-free/"
Issues = "https://github.com/MelkonTech/zohomail-free/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["zohomail*"]
